@@ -1,3 +1,13 @@
+WIP
+-----------------------------
+* Delta Module
+  - Add data smoothing calculation using "exponential moving average" method
+    for deltabest reading to filter out unusual data noise.
+  - Add "number_of_smoothing_samples" option,
+    which sets number of samples for data smoothing calculation.
+    Value range in "1" to "100". Default is "30" samples.
+    Higher value results more smoothness, but may lose accuracy.
+
 2.15.1 (2024-07-13)
 -----------------------------
 * General
